--- a/action.yml
+++ b/action.yml
@@ -22,10 +22,10 @@ inputs:
     required: false
   should-create-missing:
     description: 'Whether or not to add new groups that are missing'
-    default: false
+    default: true
     required: false
   dry-run:
-    description: 'Simulate API calls rather than actually performing the action'
+    description: 'Simulate non-GET API calls rather than actually performing the action'
     default: false
     required: false
 
