--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,8 @@ inputs:
     required: true
   org-name:
     description: 'The name of the organization that should be grouped'
-    required: true
+    default: ''
+    required: false
   org-repo-type:
     description: 'The types of repositories to load and add to groups'
     default: 'all'
