--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && ncc build lib/main.js",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "@types/node": "^12.0.4",
     "@types/semver": "^6.0.0",
     "@vercel/ncc": "^0.23.0",
+    "husky": "^5.1.3",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "prettier": "^1.17.1",
